fix: wrap nav

--- a/public/style.css
+++ b/public/style.css
@@ -37,6 +37,7 @@ body, html {
 
 .nav {
 	display: flex;
+	flex-wrap: wrap;
 	gap: 1rem;
 }
 
